Adds oAuth (not sure how well)
