# internal/api/handlers/commands/create_user_command.go
@@ -3,21 +3,18 @@ package command
 import (
 	"context"
 
-	"github.com/CallumLewisGH/Generic-Service-Base/internal/api/authentication"
 	cqrs "github.com/CallumLewisGH/Generic-Service-Base/internal/domain"
 	repos "github.com/CallumLewisGH/Generic-Service-Base/internal/domain/repositories"
 	userModel "github.com/CallumLewisGH/Generic-Service-Base/internal/domain/user"
 	"gorm.io/gorm"
 )
 
-func CreateUserCommand(userReq *userModel.UserRequest) (*userModel.UserDTO, error) {
+func CreateUserCommand(userReq userModel.CreateUserRequest) (*userModel.UserDTO, error) {
 	commandFunc := func(db *gorm.DB, ctx context.Context) (*userModel.UserDTO, error) {
-		generatedHash, _ := authentication.GenerateHash(userReq.Password)
-
 		user := userModel.User{
-			Username:     userReq.Username,
-			Email:        userReq.Email,
-			PasswordHash: generatedHash,
+			Username: userReq.Username,
+			Email:    userReq.Email,
+			AuthId:   userReq.AuthId,
 		}
 
 		created_user, err := repos.NewUserRepo(db).CreateOne(user)
