# internal/api/handlers/queries/get_user_by_auth_id_query.go
@@ -6,14 +6,13 @@ import (
 	cqrs "github.com/CallumLewisGH/Generic-Service-Base/internal/domain"
 	repos "github.com/CallumLewisGH/Generic-Service-Base/internal/domain/repositories"
 	userModel "github.com/CallumLewisGH/Generic-Service-Base/internal/domain/user"
-	"github.com/google/uuid"
 	"gorm.io/gorm"
 )
 
-func GetUserByIdQuery(id uuid.UUID) (*userModel.UserDTO, error) {
+func GetUserByAuthIdQuery(userAuthId string) (*userModel.UserDTO, error) {
 	queryFunc := func(db *gorm.DB, ctx context.Context) (*userModel.UserDTO, error) {
 		user := userModel.User{}
-		user.ID = id
+		user.AuthId = userAuthId
 		if err := repos.NewUserRepo(db).First(&user); err != nil {
 			return nil, err
 		}
